chore: impl first angular app feature

--- a/frontend/src/app/app.css
+++ b/frontend/src/app/app.css
@@ -7,3 +7,13 @@
   min-height: 100vh;   /* full screen height */
   text-align: center;
 }
+
+.mat-toolbar button {
+  margin-left: 16px; /* Perfect Material spacing */
+}
+
+.toolbar-logo {
+  width: 50px;
+  height: auto;
+  margin-right: 12px;
+}
