--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,9 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
 :root {
   --inter-font: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-body {
-  margin: 0;
-  font-family: var(--inter-font);
+html, body {
+  height: 100%;
 }
