--- a/frontend/src/app/shared/toolbar/toolbar.html
+++ b/frontend/src/app/shared/toolbar/toolbar.html
@@ -1,1 +1,8 @@
-<p>toolbar works!</p>
+<mat-toolbar color="primary">
+  <span>Cookaroo</span>
+  <span class="spacer"></span>
+
+  <button mat-raised-button color="primary" (click)="onLoadRecipes()">
+    Load recipes
+  </button>
+</mat-toolbar>
