chore: cookaroo ux ui improvement

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,7 +1,7 @@
 <app-toolbar></app-toolbar>
 
 <main class="app-content">
-  <app-recipes></app-recipes>
+  <router-outlet></router-outlet>  <!-- ✅ THIS is where routes render -->
 </main>
 
 
