fix: fixing sonar issue

--- a/frontend/src/app/shared/toolbar/toolbar.html
+++ b/frontend/src/app/shared/toolbar/toolbar.html
@@ -2,7 +2,9 @@
 
   <div
     class="logo-container"
-      (click)="goHome()">
+    (click)="goHome()"
+    (keydown.enter)="goHome()"
+    (keydown.space)="goHome()">
     <img
       src="/cookaroo_final.png"
       class="toolbar-logo"
