--- a/frontend/src/app/shared/toolbar/toolbar.html
+++ b/frontend/src/app/shared/toolbar/toolbar.html
@@ -6,11 +6,10 @@
     (keydown.enter)="goHome()"
     (keydown.space)="goHome()">
     <img
-      src="/cookaroo_final.png"
+      src="/cookaroo_test3.png"
       class="toolbar-logo"
       alt=""
     />
-    <span class="logo-text">Cookaroo</span>
   </div>
 
   <span class="spacer"></span>
