chore: ongoing ui improvement

--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -4,4 +4,8 @@
   <span class="tagline-text">
     The best recipes are just a click away!
   </span>
+  <a mat-button class="blub"
+     routerLink="/recipes">
+    Recipes
+  </a>
 </div>
