--- a/frontend/src/app/recipes/recipe-list/recipe-list.html
+++ b/frontend/src/app/recipes/recipe-list/recipe-list.html
@@ -1,27 +1,27 @@
-<div class="recipes-container">
-      <div class="recipe-grid">
-        @for (r of recipes; track r.id) {
-          <button
-            type="button"
-            class="recipe-card-button"
-            (click)="onRecipeClick(r)">
-            <mat-card
-              class="recipe-card"
-              [ngClass]="'difficulty-' + r.difficulty.toLowerCase()">
-              <div class="recipe-header">
-                <mat-card-title> {{ r.title }}</mat-card-title>
-                <span
-                  class="pill"
-                  [ngClass]="'difficulty-' + r.difficulty.toLowerCase()">
-           {{ r.difficulty.toLowerCase() }}
-          </span>
-              </div>
+<!--<div class="recipes-container">-->
+<!--      <div class="recipe-grid">-->
+<!--        @for (r of recipes; track r.id) {-->
+<!--          <button-->
+<!--            type="button"-->
+<!--            class="recipe-card-button"-->
+<!--            (click)="onRecipeClick(r)">-->
+<!--            <mat-card-->
+<!--              class="recipe-card"-->
+<!--              [ngClass]="'difficulty-' + r.difficulty.toLowerCase()">-->
+<!--              <div class="recipe-header">-->
+<!--                <mat-card-title> {{ r.title }}</mat-card-title>-->
+<!--                <span-->
+<!--                  class="pill"-->
+<!--                  [ngClass]="'difficulty-' + r.difficulty.toLowerCase()">-->
+<!--           {{ r.difficulty.toLowerCase() }}-->
+<!--          </span>-->
+<!--              </div>-->
 
-              <mat-card-content>
-                <p>{{ r.description }}</p>
-              </mat-card-content>
-            </mat-card>
-          </button>
-        }
-      </div>
-</div>
+<!--              <mat-card-content>-->
+<!--                <p>{{ r.description }}</p>-->
+<!--              </mat-card-content>-->
+<!--            </mat-card>-->
+<!--          </button>-->
+<!--        }-->
+<!--      </div>-->
+<!--</div>-->
