--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -1,11 +1,11 @@
 <div class="logo-container">
-  <img src="/cookaroo_test5.png" alt="Cookaroo Logo" class="logo-image">
+
+  <div class="logo">
+    <mat-icon class="logo-image">restaurant</mat-icon>
+    <span>Cookaroo</span>
+  </div>
 
   <span class="tagline-text">
     The best recipes are just a click away!
   </span>
-  <a mat-button class="blub"
-     routerLink="/recipes">
-    Recipes
-  </a>
 </div>
