--- a/frontend/src/app/recipes/recipe-list/recipe-list.html
+++ b/frontend/src/app/recipes/recipe-list/recipe-list.html
@@ -1,3 +1,19 @@
+<div class="recipe-grid">
+
+  @for (recipe of recipes; track recipe.id) {
+    <mat-card (click)="onRecipeClick(recipe)">
+      <mat-card-title>{{recipe.title}}</mat-card-title>
+      <mat-card-content>
+        <p> {{ recipe.description }}</p>
+      </mat-card-content>
+    </mat-card>
+  }
+
+</div>
+
+
+
+
 <!--<div class="recipes-container">-->
 <!--      <div class="recipe-grid">-->
 <!--        @for (r of recipes; track r.id) {-->
