chore: trying out  toolbar styling

--- a/frontend/src/app/shared/toolbar/toolbar.html
+++ b/frontend/src/app/shared/toolbar/toolbar.html
@@ -4,7 +4,7 @@
   </a>
   <span class="example-spacer"></span>
   <button mat-button (click)="load()">
-    <mat-icon>dataset</mat-icon>
+    <mat-icon>menu_book</mat-icon>
     <span class="button-text">Rezepte</span>
   </button>
   <button mat-button>
