chore: ongoing ui improvement

--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -2,7 +2,7 @@
 
   <div class="logo">
     <mat-icon class="logo-image">restaurant</mat-icon>
-    <span>Cookaroo</span>
+    <span class="logo-text">Cookaroo</span>
   </div>
 
   <span class="tagline-text">
