--- a/frontend/src/app/recipes/recipe-detail/recipe-detail.html
+++ b/frontend/src/app/recipes/recipe-detail/recipe-detail.html
@@ -1,48 +1,57 @@
-<div class="recipes-container recipe-detail-page">
+<div class="recipe-detail">
+  <div class="back-button-container">
+    <button matButton class="screen-button" (click)="goBack()">
+      <mat-icon>arrow_back</mat-icon>
+      Zurück
+    </button>
+  </div>
 
-  <button mat-button class="back-link" (click)="goBack()">
-    ← Zurück
-  </button>
 
-  @if (recipe()) {
-    <mat-card
-      class="recipe-card recipe-detail-card"
-      [ngClass]="'difficulty-' + recipe()!.difficulty.toLowerCase()">
+  @if (recipe(); as recipe) {
+    <mat-card class="recipe-card">
+      <div class="recipe-header">
+        <div class="recipe-title-block">
+          <h1 class="recipe-title">{{ recipe.title }}</h1>
+          <p class="recipe-subtitle">{{ recipe.description }}</p>
+        </div>
 
-      <div class="recipe-header recipe-detail-header">
-        <h1 class="recipe-detail-title">
-          {{ recipe()!.title }}
-        </h1>
+        <div class="recipe-meta">
 
-        <span
-          class="pill recipe-detail-pill"
-          [ngClass]="'difficulty-' + recipe()!.difficulty.toLowerCase()">
-        {{ recipe()!.difficulty.toLowerCase() }}
-       </span>
+
+          <span class="meta-chip servings-chip">
+            {{ recipe.servings }} Portionen
+          </span>
+
+          <span class="meta-chip difficulty-chip">
+            {{ recipe.difficulty.toLowerCase() }}
+          </span>
+        </div>
+
+        <mat-divider></mat-divider>
+
+        <section class="recipe-section">
+          <h3>Zutaten</h3>
+          <ul>
+            @for (item of recipe.ingredients; track item) {
+              <li>{{ item }}</li>
+            }
+          </ul>
+        </section>
+
+        <section class="recipe-section">
+          <h3>Zubereitung</h3>
+          <ol>
+            @for (step of recipe.steps; track step) {
+              <li>{{ step }}</li>
+            }
+          </ol>
+        </section>
+
+        <mat-card-actions class="recipe-card-action">
+          <button matButton class="screen-button">Bearbeiten</button>
+          <button matButton class="screen-button">Entfernen</button>
+        </mat-card-actions>
       </div>
-
-      <p class="recipe-detail-description">
-        {{ recipe()!.description }}
-      </p>
-
-      <div class="recipe-detail-meta">
-        <span>🍽 {{ recipe()!.servings }} Portionen</span>
-      </div>
-
-      <h3>Zutaten</h3>
-      <ul>
-        @for (item of recipe()!.ingredients; track item) {
-          <li>{{ item }}</li>
-        }
-      </ul>
-
-      <h3>Zubereitung</h3>
-      <ol>
-        @for (step of recipe()!.steps; track step) {
-          <li>{{ step }}</li>
-        }
-      </ol>
-
     </mat-card>
   }
 </div>
