--- a/frontend/src/app/shared/toolbar/toolbar.html
+++ b/frontend/src/app/shared/toolbar/toolbar.html
@@ -3,95 +3,20 @@
    <mat-icon>restaurant</mat-icon>Cookaroo
   </a>
   <span class="example-spacer"></span>
-  <button mat-button (click)="load()">
+  <button matButton (click)="load()">
     <mat-icon>menu_book</mat-icon>
     <span class="button-text">Rezepte</span>
   </button>
-  <button mat-button>
+  <button matButton>
     <mat-icon>add_box</mat-icon>
     <span class="button-text">Neu</span>
   </button>
-  <button mat-button>
+  <button matButton>
     <mat-icon>filter_alt</mat-icon>
     <span class="button-text">Filter</span>
   </button>
-
-
-
   <button matIconButton class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
 
-<!--<mat-toolbar color="primary">-->
-
-<!--  <button-->
-<!--    mat-button-->
-<!--    color = "primary"-->
-<!--    class="logo-button"-->
-<!--    (click)="goHome()"-->
-<!--    aria-label="Cookaroo Home"-->
-<!--    title="Home">-->
-<!--&lt;!&ndash;    <img&ndash;&gt;-->
-<!--&lt;!&ndash;      src="/cookaroo_test3.png"&ndash;&gt;-->
-<!--&lt;!&ndash;      class="toolbar-logo"&ndash;&gt;-->
-<!--&lt;!&ndash;      alt="Cookaroo Home"&ndash;&gt;-->
-<!--&lt;!&ndash;    />&ndash;&gt;-->
-<!--  </button>-->
-
-<!--  <span class="spacer"></span>-->
-
-<!--  <button-->
-<!--    mat-button-->
-<!--    class="nav-button"-->
-<!--    (click)="load()"-->
-<!--    [disabled]="loading">-->
-<!--    @if (loading) {-->
-<!--      Laden…-->
-<!--    } @else {-->
-<!--      Rezepte-->
-<!--    }-->
-<!--  </button>-->
-
-<!--  <button-->
-<!--    mat-button-->
-<!--    class="nav-button">-->
-<!--    Neu-->
-<!--  </button>-->
-<!--</mat-toolbar>-->
-
-<!--&lt;!&ndash;<mat-toolbar class="cookaroo-toolbar mat-elevation-z4">&ndash;&gt;-->
-
-<!--&lt;!&ndash;  <div&ndash;&gt;-->
-<!--&lt;!&ndash;    class="logo-container"&ndash;&gt;-->
-<!--&lt;!&ndash;    (click)="goHome()"&ndash;&gt;-->
-<!--&lt;!&ndash;    (keydown.enter)="goHome()"&ndash;&gt;-->
-<!--&lt;!&ndash;    (keydown.space)="goHome()">&ndash;&gt;-->
-<!--&lt;!&ndash;    <img&ndash;&gt;-->
-<!--&lt;!&ndash;      src="/cookaroo_test3.png"&ndash;&gt;-->
-<!--&lt;!&ndash;      class="toolbar-logo"&ndash;&gt;-->
-<!--&lt;!&ndash;      alt=""&ndash;&gt;-->
-<!--&lt;!&ndash;    />&ndash;&gt;-->
-<!--&lt;!&ndash;  </div>&ndash;&gt;-->
-
-<!--&lt;!&ndash;  <span class="spacer"></span>&ndash;&gt;-->
-
-<!--&lt;!&ndash;  <button&ndash;&gt;-->
-<!--&lt;!&ndash;    mat-raised-button&ndash;&gt;-->
-<!--&lt;!&ndash;    class="nav-button"&ndash;&gt;-->
-<!--&lt;!&ndash;    (click)="load()"&ndash;&gt;-->
-<!--&lt;!&ndash;    [disabled]="loading">&ndash;&gt;-->
-
-<!--&lt;!&ndash;    @if (loading) {&ndash;&gt;-->
-<!--&lt;!&ndash;      Laden…&ndash;&gt;-->
-<!--&lt;!&ndash;    } @else {&ndash;&gt;-->
-<!--&lt;!&ndash;      Rezepte&ndash;&gt;-->
-<!--&lt;!&ndash;    }&ndash;&gt;-->
-<!--&lt;!&ndash;  </button>&ndash;&gt;-->
-
-<!--&lt;!&ndash;  <button&ndash;&gt;-->
-<!--&lt;!&ndash;    mat-raised-button&ndash;&gt;-->
-<!--&lt;!&ndash;    class="nav-button">&ndash;&gt;-->
-<!--&lt;!&ndash;    Neu&ndash;&gt;-->
-<!--&lt;!&ndash;  </button>&ndash;&gt;-->
-<!--&lt;!&ndash;</mat-toolbar>&ndash;&gt;-->
