--- a/frontend/src/app/recipes/recipe-detail/recipe-detail.scss
+++ b/frontend/src/app/recipes/recipe-detail/recipe-detail.scss
@@ -10,9 +10,9 @@
 
 .recipe-card {
   margin: 0 auto;
-  max-width: 500px;
+  max-width: 720px;
   border-radius: 20px;
-  padding: 20px 24px 0px;
+  padding: 24px 16px 8px;
   box-shadow:
     0 4px 10px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.08);
@@ -23,6 +23,10 @@
 .recipe-header {
   gap: 16px;
   margin-bottom: 16px;
+}
+
+.recipe-detail{
+  padding: 24px 16px 48px;
 }
 
 .recipe-title-block {
