--- a/frontend/src/app/recipes/recipe-list/recipe-list.html
+++ b/frontend/src/app/recipes/recipe-list/recipe-list.html
@@ -7,6 +7,11 @@
       (keydown.enter)=" onRecipeClick(recipe)"
       (keydown.space)="onRecipeClick(recipe)">
       <mat-card-title>{{ recipe.title }}</mat-card-title>
+      <mat-card-subtitle>
+        <p class="recipe-categories">
+          {{ recipe.category.join(' • ').toLowerCase() }}
+        </p>
+      </mat-card-subtitle>
       <mat-card-content>
         <p> {{ recipe.description }}</p>
       </mat-card-content>
